fixed data align while 550px width in Profile component

--- a/src/App/comps/Dashboard/Profile/Profile.scss
+++ b/src/App/comps/Dashboard/Profile/Profile.scss
@@ -13,10 +13,18 @@
       border-radius: 50%;
     }
 
+    @media(max-width:550px) {
+      align-items: center;
+    }
   }
 
   &__userDataElem {
     margin-top: 15px;
+
+    @media(max-width:550px) {
+      text-align: center;
+    }
+
   }
 
   &__userDataElemTitle {
